--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@azure/storage-blob": "^12.14.0",
         "@mapbox/mapbox-sdk": "^0.15.0",
+        "@novu/node": "^0.15.0",
         "@sendgrid/mail": "^7.7.0",
         "axios": "^1.3.5",
         "azure-storage": "^2.10.7",
